--- a/odevCoreUOF/odevCoreUOF/Views/Shared/_Layout.cshtml
+++ b/odevCoreUOF/odevCoreUOF/Views/Shared/_Layout.cshtml
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="~/template/vendors/datatables.net-bs4/dataTables.bootstrap4.css">
     <link rel="stylesheet" href="~/template/vendors/ti-icons/css/themify-icons.css">
     <link rel="stylesheet" type="text/css" href="~/template/js/select.dataTables.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css">
     <!-- End plugin css for this page -->
     <!-- inject:css -->
     <link rel="stylesheet" href="~/template/css/vertical-layout-light/style.css">
@@ -23,6 +24,12 @@
     <link rel="shortcut icon" href="~/template/images/favicon.png" />
 </head>
 <body>
+    <style>
+        .custom-icon {
+            font-size: 24px; /* İkon boyutu */
+            /* Diğer isteğe bağlı stillendirme özellikleri */
+        }
+    </style>
     <div class="container-scroller">
         <!-- partial:partials/_navbar.html -->
         <nav class="navbar col-lg-12 col-12 p-0 fixed-top d-flex flex-row">
@@ -96,23 +103,12 @@
                         </div>
                     </li>
                     <li class="nav-item nav-profile dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown" id="profileDropdown">
-                            <img src="~/template/images/faces/face28.jpg" alt="profile" />
+                        <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown" id="profileDropdown"><img src="~/template/images/faces/agu.jpg" />
                         </a>
-                        <div class="dropdown-menu dropdown-menu-right navbar-dropdown" aria-labelledby="profileDropdown">
-                            <a class="dropdown-item">
-                                <i class="ti-settings text-primary"></i>
-                                Settings
-                            </a>
-                            <a class="dropdown-item">
-                                <i class="ti-power-off text-primary"></i>
-                                Logout
-                            </a>
-                        </div>
                     </li>
-                    <li class="nav-item nav-settings d-none d-lg-flex">
-                        <a class="nav-link" href="#">
-                            <i class="icon-ellipsis"></i>
+                    <li class="nav-item d-none d-lg-flex">
+                        <a href="@Url.Action("Logout", "Account")">
+                            <i class="bi bi-door-open-fill custom-icon"></i>
                         </a>
                     </li>
                 </ul>
